[gd_scene load_steps=31 format=3 uid="uid://dsuxe5sv32pnj"]

[ext_resource type="Script" path="res://shared/stage.gd" id="1_7xekt"]
[ext_resource type="Texture2D" uid="uid://bhetge0qs4s67" path="res://00_art/Spritesheet_UI_Paper.png" id="2_tet03"]
[ext_resource type="Texture2D" uid="uid://bicokcoghxtlc" path="res://00_art/UI_Papernote_Spritesheet.png" id="3_h7lnt"]
[ext_resource type="Texture2D" uid="uid://xgyn0udv54u5" path="res://00_art/Spritesheet_UI_Paper_Animation_Button_01.png" id="4_yqrxd"]
[ext_resource type="Texture2D" uid="uid://c13imm0fxepsf" path="res://00_art/Home.png" id="5_jt18v"]
[ext_resource type="Texture2D" uid="uid://q6sjqkh0gvfj" path="res://05/src/img.png" id="6_wvw65"]
[ext_resource type="Script" path="res://shared/ClickCircle.gd" id="7_swc2r"]
[ext_resource type="Script" path="res://shared/right_rail.gd" id="8_kbrh7"]
[ext_resource type="Shader" path="res://shared/right_rail_buttons.gdshader" id="9_os0cj"]
[ext_resource type="Theme" uid="uid://bytdxgpfarvl0" path="res://shared/right_rail_button.tres" id="10_7we8c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b17r5"]
bg_color = Color(0.913725, 0.231373, 0.909804, 1)
border_width_top = 8
border_width_bottom = 21

[sub_resource type="Theme" id="Theme_p4p8b"]
HScrollBar/styles/scroll = SubResource("StyleBoxFlat_b17r5")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jt6b8"]
texture = ExtResource("3_h7lnt")
region_rect = Rect2(352, 354, 32, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3dbj"]
atlas = ExtResource("4_yqrxd")
region = Rect2(35, 35, 25, 27)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_raqh3"]
texture = SubResource("AtlasTexture_c3dbj")

[sub_resource type="AtlasTexture" id="AtlasTexture_tmfsv"]
atlas = ExtResource("4_yqrxd")
region = Rect2(36, 69, 24, 25)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_a6bil"]
texture = SubResource("AtlasTexture_tmfsv")

[sub_resource type="AtlasTexture" id="AtlasTexture_ycthu"]
atlas = ExtResource("6_wvw65")
region = Rect2(2.08165e-12, 2.08165e-12, 2999, 975)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iy5jl"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="Theme" id="Theme_inwhd"]
LineEdit/colors/selection_color = Color(0.709804, 0.411765, 0.27451, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rjr6q"]
shader = ExtResource("9_os0cj")
shader_parameter/blue = 1.0
shader_parameter/red = 1.0
shader_parameter/green = 1.0

[sub_resource type="ButtonGroup" id="ButtonGroup_43qao"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7fp2p"]
atlas = ExtResource("6_wvw65")
region = Rect2(44, 1096, 186, 194)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jmkaw"]
shader = ExtResource("9_os0cj")
shader_parameter/blue = 1.0
shader_parameter/red = 1.0
shader_parameter/green = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_jxs5v"]
atlas = ExtResource("6_wvw65")
region = Rect2(238, 1142, 172, 171)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ow0ka"]
shader = ExtResource("9_os0cj")
shader_parameter/blue = 1.0
shader_parameter/red = 1.0
shader_parameter/green = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_5bbqy"]
atlas = ExtResource("6_wvw65")
region = Rect2(411, 1109, 232, 195)

[sub_resource type="Theme" id="Theme_820n0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b1kf4"]
bg_color = Color(0.0117647, 0.694118, 0.631373, 1)

[sub_resource type="Theme" id="Theme_k5e1q"]

[node name="Stage" type="Node"]
script = ExtResource("1_7xekt")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 9.0
theme = SubResource("Theme_p4p8b")
scroll_horizontal_custom_step = -0.72
scroll_deadzone = 200

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/ScrollContainer"]
layout_mode = 2

[node name="left_rail_notch_buffer" type="Control" parent="HBoxContainer/ScrollContainer/HBoxContainer"]
z_index = 1000
custom_minimum_size = Vector2(100, 2.08165e-12)
layout_mode = 2

[node name="NinePatchRect" type="NinePatchRect" parent="HBoxContainer/ScrollContainer/HBoxContainer/left_rail_notch_buffer"]
visible = false
layout_mode = 0
offset_right = 111.0
offset_bottom = 971.0
texture = ExtResource("2_tet03")
region_rect = Rect2(350, 31, 37, 98)
patch_margin_left = 23
patch_margin_top = 12
patch_margin_right = 14
patch_margin_bottom = 16
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="NinePatchRect2" type="NinePatchRect" parent="HBoxContainer/ScrollContainer/HBoxContainer/left_rail_notch_buffer"]
layout_mode = 0
offset_right = 111.0
offset_bottom = 971.0
texture = ExtResource("3_h7lnt")
region_rect = Rect2(608, 32, 32, 96)
patch_margin_left = 23
patch_margin_top = 12
patch_margin_right = 14
patch_margin_bottom = 16
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="Home" type="Button" parent="HBoxContainer/ScrollContainer/HBoxContainer/left_rail_notch_buffer"]
layout_mode = 2
offset_left = 32.0
offset_top = 38.0
offset_right = 78.0
offset_bottom = 79.0
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_jt6b8")
theme_override_styles/hover = SubResource("StyleBoxTexture_raqh3")
theme_override_styles/pressed = SubResource("StyleBoxTexture_a6bil")
icon = ExtResource("5_jt18v")
icon_alignment = 1

[node name="CanvasContainer" type="Control" parent="HBoxContainer/ScrollContainer/HBoxContainer"]
custom_minimum_size = Vector2(2999, 975)
layout_mode = 2
mouse_filter = 1

[node name="hidden_objects_image" type="TextureRect" parent="HBoxContainer/ScrollContainer/HBoxContainer/CanvasContainer"]
layout_mode = 0
offset_right = 2999.0
offset_bottom = 975.0
texture = SubResource("AtlasTexture_ycthu")
stretch_mode = 2

[node name="click_zone_container" type="Control" parent="HBoxContainer/ScrollContainer/HBoxContainer/CanvasContainer"]
anchors_preset = 0

[node name="sheep" type="Area2D" parent="HBoxContainer/ScrollContainer/HBoxContainer/CanvasContainer/click_zone_container"]
position = Vector2(321, 190)

[node name="@Polygon2D@30000" type="Polygon2D" parent="HBoxContainer/ScrollContainer/HBoxContainer/CanvasContainer/click_zone_container/sheep"]
polygon = PackedVector2Array(-24, -28, 12, -28, 32, 1, 7, 27, -16, 14, -25, 3)

[node name="@CollisionPolygon2D@30001" type="CollisionPolygon2D" parent="HBoxContainer/ScrollContainer/HBoxContainer/CanvasContainer/click_zone_container/sheep"]
polygon = PackedVector2Array(-24, -28, 12, -28, 32, 1, 7, 27, -16, 14, -25, 3)

[node name="turtle" type="Area2D" parent="HBoxContainer/ScrollContainer/HBoxContainer/CanvasContainer/click_zone_container"]
position = Vector2(1462, -393)

[node name="@Polygon2D@30002" type="Polygon2D" parent="HBoxContainer/ScrollContainer/HBoxContainer/CanvasContainer/click_zone_container/turtle"]
polygon = PackedVector2Array(1219, 568, 1209, 587, 1213, 602, 1266, 607, 1295, 571, 1274, 544, 1255, 532, 1229, 539)

[node name="@CollisionPolygon2D@30003" type="CollisionPolygon2D" parent="HBoxContainer/ScrollContainer/HBoxContainer/CanvasContainer/click_zone_container/turtle"]
polygon = PackedVector2Array(1219, 568, 1209, 587, 1213, 602, 1266, 607, 1295, 571, 1274, 544, 1255, 532, 1229, 539)

[node name="hippo" type="Area2D" parent="HBoxContainer/ScrollContainer/HBoxContainer/CanvasContainer/click_zone_container"]
position = Vector2(1687, -430)

[node name="@Polygon2D@30004" type="Polygon2D" parent="HBoxContainer/ScrollContainer/HBoxContainer/CanvasContainer/click_zone_container/hippo"]
polygon = PackedVector2Array(556, 822, 533, 827, 528, 840, 538, 862, 578, 863, 581, 856, 633, 868, 664, 843, 665, 808, 648, 789, 618, 783, 583, 791, 566, 804)

[node name="@CollisionPolygon2D@30005" type="CollisionPolygon2D" parent="HBoxContainer/ScrollContainer/HBoxContainer/CanvasContainer/click_zone_container/hippo"]
polygon = PackedVector2Array(556, 822, 533, 827, 528, 840, 538, 862, 578, 863, 581, 856, 633, 868, 664, 843, 665, 808, 648, 789, 618, 783, 583, 791, 566, 804)

[node name="ClickCircle" type="Area2D" parent="HBoxContainer/ScrollContainer/HBoxContainer/CanvasContainer"]
script = ExtResource("7_swc2r")

[node name="right_rail" type="ScrollContainer" parent="HBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(200, 200)
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_iy5jl")
horizontal_scroll_mode = 0
script = ExtResource("8_kbrh7")

[node name="legend_for_hidden_objects" type="VBoxContainer" parent="HBoxContainer/right_rail"]
clip_contents = true
custom_minimum_size = Vector2(250, 200)
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_inwhd")
theme_override_constants/separation = 16

[node name="sheep" type="Button" parent="HBoxContainer/right_rail/legend_for_hidden_objects"]
material = SubResource("ShaderMaterial_rjr6q")
custom_minimum_size = Vector2(100, 200)
layout_mode = 2
theme = ExtResource("10_7we8c")
toggle_mode = true
button_group = SubResource("ButtonGroup_43qao")
icon = SubResource("AtlasTexture_7fp2p")
icon_alignment = 1
expand_icon = true

[node name="turtle" type="Button" parent="HBoxContainer/right_rail/legend_for_hidden_objects"]
material = SubResource("ShaderMaterial_jmkaw")
custom_minimum_size = Vector2(100, 200)
layout_mode = 2
theme = ExtResource("10_7we8c")
toggle_mode = true
button_group = SubResource("ButtonGroup_43qao")
icon = SubResource("AtlasTexture_jxs5v")
icon_alignment = 1
expand_icon = true

[node name="hippo" type="Button" parent="HBoxContainer/right_rail/legend_for_hidden_objects"]
material = SubResource("ShaderMaterial_ow0ka")
custom_minimum_size = Vector2(100, 200)
layout_mode = 2
theme = ExtResource("10_7we8c")
toggle_mode = true
button_group = SubResource("ButtonGroup_43qao")
icon = SubResource("AtlasTexture_5bbqy")
icon_alignment = 1
expand_icon = true

[node name="level_complete_panel" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -2000.0
offset_bottom = -1000.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Panel" type="Panel" parent="level_complete_panel"]
custom_minimum_size = Vector2(1500, 1500)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 102.0
offset_top = -1.0
offset_right = 1602.0
offset_bottom = 1499.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_820n0")
theme_override_styles/panel = SubResource("StyleBoxFlat_b1kf4")

[node name="RichTextLabel" type="RichTextLabel" parent="level_complete_panel/Panel"]
layout_mode = 0
offset_left = 391.0
offset_top = 126.0
offset_right = 1238.0
offset_bottom = 319.0
theme_override_font_sizes/normal_font_size = 120
theme_override_font_sizes/bold_font_size = 60
text = "Level is DONE"

[node name="btn_level_select" type="Button" parent="level_complete_panel/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -110.0
offset_top = 410.0
offset_right = 110.0
offset_bottom = 537.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 60
text = "Next"

[node name="score_label" type="Label" parent="level_complete_panel"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -236.0
offset_top = 58.0
offset_right = -78.0
offset_bottom = 164.0
grow_horizontal = 0
theme = SubResource("Theme_k5e1q")
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 75
text = "5/10"

[connection signal="gui_input" from="HBoxContainer/ScrollContainer/HBoxContainer/CanvasContainer" to="HBoxContainer/ScrollContainer/HBoxContainer/CanvasContainer/ClickCircle" method="_on_canvas_with_clickzones_gui_input" flags=18]
[connection signal="area_entered" from="HBoxContainer/ScrollContainer/HBoxContainer/CanvasContainer/ClickCircle" to="HBoxContainer/ScrollContainer/HBoxContainer/CanvasContainer/ClickCircle" method="_on_area_entered" flags=18]
